# mlx-image

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  UPLOAD.md  pyproject.toml  train.py  validation.py
config/: train.yaml  validation.yaml
examples/: classify.py
notebooks/: dino_attention.ipynb
results/: results-imagenet-1k.csv
scripts/: setup-dev.sh
src/mlxim/: __init__.py
src/mlxim/callbacks/: __init__.py  checkpoint.py
src/mlxim/data/: __init__.py  _base.py  _utils.py  folder.py  image_folder.py  loader.py
src/mlxim/io/: __init__.py  config.py  image.py
src/mlxim/layers/: __init__.py
src/mlxim/metrics/: classification.py
src/mlxim/model/: __init__.py  _config.py  _factory.py  _registry.py  _utils.py
src/mlxim/model/dinov3/: __init__.py  _factory.py  dinov3.py  ffn_layers.py
src/mlxim/model/efficientnet/: __init__.py  _blocks.py  _factory.py  efficientnet.py
src/mlxim/model/layers/: __init__.py  _ops.py  attention.py  functional.py  layer_scale.py  misc.py  mlp.py  patch_dropout.py  patch_embed.py  pool.py  rms_norm.py  rope_position_encoding.py  utils.py
src/mlxim/model/mobilenet/: __init__.py  _factory.py  mobilenetv2.py  mobilenetv3.py
src/mlxim/model/regnet/: __init__.py  _factory.py  regnet.py
src/mlxim/model/resnet/: __init__.py  _factory.py  resnet.py
src/mlxim/model/swin_transformer/: __init__.py  _factory.py  swin_transformer.py
src/mlxim/model/vit/: __init__.py  _factory.py  vit.py
src/mlxim/torch/: resnet.py  swin_transformers.py  utils.py  vit.py
src/mlxim/trainer/: trainer.py
src/mlxim/transform/: __init__.py  _utils.py  imagenet.py
src/mlxim/utils/: imagenet.py  time.py  validation.py
tests/: conftest.py  test_arch_init.py  test_checkpoint.py  test_collate.py  test_config.py  test_data.py  test_data_loader.py  test_dinov3.py  test_functional.py  test_integration.py  test_io.py  test_layers_misc.py  test_layers_ops.py  test_layers_utils.py  test_load_weights.py  test_metrics.py  test_mlp.py  test_model_factory.py  test_model_utils.py  test_models.py  test_pool.py  test_pool_extended.py  test_resnet.py  test_time.py  test_trainer.py  test_transform.py  test_validation.py
