[tool.poetry]
name = "mlx-image"
version = "0.1.10"
description = "Apple MLX image models library"
authors = ["Riccardo Musmeci <riccardomusmeci92@gmail.com>"]
readme = "README.md"
packages = [
    { include = "mlxim", from = "src" },
]

[tool.poetry.dependencies]
python="^3.10"
mlx = "0.24.2"
numpy = "*"
tqdm = "*"
safetensors = "*"
opencv-python = "4.9.0.80"
Pillow = ">=12.1.1"
pandas = "2.2.1"
matplotlib = "*"
albumentations = "1.4.1"
types-pyyaml = "^6.0.12.12"
huggingface_hub = "0.24.0"

# dev dependencies
ruff = { version = "0.0.264", optional = true }

pre-commit = { version = "3.3.1", optional = true }
docstr-coverage = { version = "2.2.0", optional = true }
twine = { version = ">=4.0.0,<5", optional = true }
torch = { version = "2.6.0", optional = true }
torchvision = { version = "0.21.0", optional = true }

# test dependencies
pytest = { version = "7.3.1", optional = true }
pytest-cov = { version = "4.0.0", optional = true }
# beautify pytest output
pytest-sugar = { version = "0.9.7", optional = true }
# parallel test execution
pytest-xdist = { version = "3.2.1", optional = true }


[tool.poetry.extras]
dev = [
  "ruff",

  "pre-commit",
  "docstr-coverage",
  "twine",
  "torch",
  "torchvision",
]
test = ["pytest", "pytest-cov", "pytest-sugar", "pytest-xdist"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "ruff>=0.8.6",
    "ty>=0.0.15",
    "urllib3>=2.6.3",
    "werkzeug>=3.1.5",
]

[tool.ruff]
src = ["src"]
line-length = 120
# Enable auto fix
fix = true
# Assume Python 3.10.
target-version = "py310"

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "__pycache__",
  "bin",
  "lib",
  "local",
  "notebooks",
]

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = ["B", "C", "E", "F", "W", "I001", "I002"]
ignore = ["E501", "D103", "F401", "C901", "B905", "E741", "F403", "F405"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.coverage.run]
branch = true
dynamic_context = "test_function"
source = ["src/mlxim"]
# omit = ["src/mlxim/__init__.py", "src/mlxim/visualization/*.py"]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self\\.debug",
  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"
show_contexts = true

[tool.local-ci]
skip_tests = true  # Requires Apple Silicon (MLX) - tests run manually on mini1/mini2
skip_ty = true  # External repo - not our type errors to fix

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file = "tests/logs/pytest-logs.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s | %(levelname)-8s | %(module)-20s | %(funcName)-20s | %(thread)-8d ; %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
unresolved-import = "ignore"
